「会員情報修正」を多言語化。

--- a/src/user_register/resources/lang/ja.json
+++ b/src/user_register/resources/lang/ja.json
@@ -2,6 +2,7 @@
     "Login": "ログイン",
     "Logout": "ログアウト",
     "Register": "会員登録",
+    "Modify": "会員情報修正",
     "Name": "お名前",
     "E-Mail Address": "E-mailアドレス",
     "Password": "パスワード",
